# STERO-ELEKTRON

./: README.md
mobile_STERO-19Z-Pietkun-Tuzimek/: CMakeLists.txt  client.py  diffdrive_kwadrat.txt  diffdrive_obrot.txt  diffdrive_prosta.txt  lab1_2_client.py  lab1_2_service.py  lab1_2_service_odom.py  lab1_2_service_odom2.py  lab1_2_service_odom3.py  lab2_service.py  package.xml  parameters_global.yaml  parameters_local.yaml  parameters_local_v1.yaml  proj1.py  proj1_publisher_controller.py  proj1_publisher_laser.py  proj1_tune.py  proj1_zbieracz_danych.py  projekt2-wskaznmikki.cpp  projekt2.cpp  projekt2222222xD.cpp  projekt2_client.cpp  projekt2aaaaa.cpp  service.py
mobile_STERO-19Z-Pietkun-Tuzimek/launch/: elektron_world.launch  proj2.launch
mobile_STERO-19Z-Pietkun-Tuzimek/srv/: Lab1_2.srv  Projekt2.srv  Velocity.srv
mobile_STERO-19Z-Pietkun-Tuzimek/worlds/: plansza1.world  plansza2.world  plansza3.world  plansza4.world  zamaledrzwi.world
